HIVE-28386: Add opens java.base/java.net for hadoop client opts